--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,7 @@ ext {
     dagger_version = '2.15'
     glide_version = "4.6.1"
     firebase_version = "11.2.0"
-    constraintLayoutVersion = '1.1.2'
+    constraintLayoutVersion = '1.1.3'
     leakCanaryVersion = '1.5.4'
 }
 
@@ -50,6 +50,10 @@ android {
         buildConfigField("String", 'HOST_LINK', '\"http://176.36.146.229\"')
         buildConfigField("String", 'PORT_API', '\":8080/\"')
         buildConfigField("String", 'PORT_SOCKET', '\"9092\"')
+        buildConfigField("String", "FABRIC_TOKEN", "\"" + FABRIC_TOKEN + "\"")
+        buildConfigField("String", "GOOGLE_API_JSON", "\"" + GOOGLE_API_JSON + "\"")
+        buildConfigField("String", "TELEGRAM_CHAT_ID", "\"" + TELEGRAM_CHAT_ID + "\"")
+        buildConfigField("String", "TELEGRAM_TOKEN", "\"" + TELEGRAM_TOKEN + "\"")
     }
     buildTypes {
         release {
