--- a/com-google-firebase-messaging/build.gradle
+++ b/com-google-firebase-messaging/build.gradle
@@ -15,32 +15,15 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        buildConfigField("String", 'HOST_LINK', '\"http://176.36.146.229\"')
+        buildConfigField("String", 'PORT_API', '\":8080/\"')
+        buildConfigField("String", 'PORT_SOCKET', '\"9092\"')
+        buildConfigField("String", "FABRIC_TOKEN", "\"gfs2ab\"")
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-        raspberryType {
-            buildConfigField("String", 'HOST_LINK', '\"http://176.36.146.229\"')
-            buildConfigField("String", 'PORT_API', '\":8085/\"')
-            buildConfigField("String", 'PORT_SOCKET', '\":9092\"')
-        }
-        dormitoryType {
-            buildConfigField("String", 'HOST_LINK', '\"http://77.47.204.201\"')
-            buildConfigField("String", 'PORT_API', '\":8082/\"')
-            buildConfigField("String", 'PORT_SOCKET', '\":9090\"')
-        }
-        varashType {
-            buildConfigField("String", 'HOST_LINK', '\"http://134.249.164.155\"')
-            buildConfigField("String", 'PORT_API', '\":8085/\"')
-            buildConfigField("String", 'PORT_SOCKET', '\":9092\"')
-        }
-        kiselBrotherType {
-            initWith(debug)
-            buildConfigField("String", 'HOST_LINK', '\"http://176.96.221.97\"')
-            buildConfigField("String", 'PORT_API', '\":8085/\"')
-            buildConfigField("String", 'PORT_SOCKET', '\":9092\"')
         }
     }
 }
