--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,7 @@ jobs:
     - run:
         name: "Setting telegram credentials"
         command: |
-          cd App/ && bundle exec fastlane set_telegram_creds token:$TELEGRAM_TOKEN chat_id:TELEGRAM_CHAT_ID
+          cd App/ && bundle exec fastlane set_telegram_creds token:$TELEGRAM_TOKEN chat_id:$TELEGRAM_CHAT_ID
     -
       run:
         name: "Initial Build"
