--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,6 +40,9 @@ jobs:
       restore_cache:
         <<: *general_cache_key
     - run:
+        name: chmod permissions
+        command: chmod +x ./gradlew
+    - run:
         name: "Setting telegram credentials"
         command: |
           bundle exec fastlane set_telegram_creds token:$TELEGRAM_TOKEN chat_id:$TELEGRAM_CHAT_ID
