--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,13 @@ buildscript {
     ext.kotlin_version = '1.3.11'
 
     repositories {
-        google()
+        mavenCentral()
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.0'
+        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.google.gms:google-services:4.2.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4.1'
     }
@@ -16,11 +18,12 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
         maven {
             url "https://maven.google.com"
         }
+        google()
         jcenter()
+        mavenCentral()
     }
 }
 
