--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,7 @@ captures/
 .idea/dictionaries
 .idea/libraries
 .idea/caches
+.idea/vcs.xml
 
 # Keystore files
 # Uncomment the following lines if you do not want to check your keystore files in.
@@ -65,3 +66,8 @@ fastlane/Preview.html
 fastlane/screenshots
 fastlane/test_output
 fastlane/readme.md
+
+.DS_Store
+app/.DS_Store
+app/fabric.properties
+app/keystore/
