--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,5 @@ gradle-app.setting
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
 .idea
+.DS_Store
+app/.DS_Store
