--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -102,7 +102,8 @@ jobs:
         run:
           name: "Sign apk prod"
           command: |
-            bundle exec fastlane sign_apk type:Release keystore_path:app/keystore/smarthome.jks store_password:$STORE_PASSWORD key_alias:$KEY_ALIAS key_password:$KEY_PASSWORD
+            echo $KEYSTORE_JKS | base64 -d > .signing/smarthome.jks
+            bundle exec fastlane sign_apk type:Release keystore_path:.signing/smarthome.jks store_password:$STORE_PASSWORD key_alias:$KEY_ALIAS key_password:$KEY_PASSWORD
       -
         run:
           name: "Deploy to fabric prod build"
