Changed Fabric token variable

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -108,7 +108,7 @@ jobs:
         run:
           name: "Deploy to fabric prod build"
           command: |
-            bundle exec fastlane crashlytics_beta api_token:$FABRIC_TOKEN build_secret:$FABRIC_BUILD_SECRET notes:PROD,$CIRCLE_BRANCH
+            bundle exec fastlane crashlytics_beta api_token:$ORG_GRADLE_PROJECT_FABRIC_TOKEN build_secret:$FABRIC_BUILD_SECRET notes:PROD,$CIRCLE_BRANCH
   deploy:
     <<: *container_config
     steps:
