--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,8 @@ gradle-app.setting
 
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
+.DS_Store
+.idea/caches/
+.idea/vcs.xml
+app/.DS_Store
+app/release
