--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
           package="com.chernysh.smarthome">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -12,7 +12,8 @@
             android:name=".SmartHomeApplication"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme">
+            android:theme="@style/AppTheme"
+            tools:replace="android:icon">
 
         <!-- Meta data -->
         <meta-data
@@ -21,6 +22,9 @@
         <meta-data
                 android:name="io.fabric.ApiKey"
                 android:value="${fabric_token}" />
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
 
         <!-- Activities -->
         <activity android:name=".presentation.flat.FlatActivity">
