--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'io.fabric.tools:gradle:1.26.1'
+        classpath 'io.fabric.tools:gradle:1.28.1'
     }
 }
 
@@ -29,10 +29,10 @@ ext {
     retrofit_version = '2.3.0'
     rxBindingKotlinVersion = '2.1.1'
     dagger_version = '2.15'
-    glide_version = "4.6.1"
+    glide_version = "4.9.0"
     firebase_version = "11.2.0"
     constraintLayoutVersion = '1.1.3'
-    leakCanaryVersion = '1.5.4'
+    leakCanaryVersion = '1.6.3'
 }
 
 android {
@@ -121,6 +121,7 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.1.16'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     implementation "com.jakewharton.rxbinding2:rxbinding-appcompat-v7:$rxBindingKotlinVersion"
+    implementation "com.jakewharton.rxbinding2:rxbinding-support-v4-kotlin:$rxBindingKotlinVersion"
     implementation "com.jakewharton.rxbinding2:rxbinding:$rxBindingKotlinVersion"
 
     //Dagger 2
@@ -145,7 +146,7 @@ dependencies {
     implementation project(":kotlinrxsocket-1.0.0")
 
     //Utils
-    implementation 'com.jakewharton.timber:timber:4.5.1'
+    implementation 'com.jakewharton.timber:timber:4.7.1'
     debugImplementation 'com.readystatesoftware.chuck:library:1.1.0'
     implementation 'com.tspoon.traceur:traceur:1.0.1'
     releaseImplementation 'com.readystatesoftware.chuck:library-no-op:1.1.0'
