DI fixes and started Flat view implementation

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,6 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:replace="android:icon">
 
@@ -29,6 +28,17 @@
 
         <!-- Activities -->
         <activity
+            android:name=".presentation.StartActivity"
+            android:screenOrientation="sensorPortrait"
+            android:theme="@style/AppTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity
             android:name=".presentation.flat.FlatActivity"
             android:exported="false"
             android:screenOrientation="sensorPortrait"
@@ -40,11 +50,6 @@
             android:exported="false"
             android:screenOrientation="sensorPortrait"
             android:theme="@style/ThemeMainTranslucentToolbar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
         <activity
