--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,7 @@ repositories {
 ext {
     support_version = '28.0.0'
     retrofit_version = '2.3.0'
-    rxBindingKotlinVersion = '2.1.1'
+    rxBindingKotlinVersion = '2.2.0'
     dagger_version = '2.15'
     glide_version = "4.9.0"
     firebase_version = "11.2.0"
@@ -86,6 +86,10 @@ android {
         preDexLibraries = false
         javaMaxHeapSize "4g"
     }
+    compileOptions {
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
+    }
 }
 
 dependencies {
@@ -115,11 +119,11 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.14.1'
 
     //RxJava
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.16'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.8'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation "com.jakewharton.rxbinding2:rxbinding-appcompat-v7:$rxBindingKotlinVersion"
     implementation "com.jakewharton.rxbinding2:rxbinding-support-v4-kotlin:$rxBindingKotlinVersion"
     implementation "com.jakewharton.rxbinding2:rxbinding:$rxBindingKotlinVersion"
@@ -155,6 +159,7 @@ dependencies {
 
     // View
     implementation 'com.github.Triggertrap:SeekArc:v1.1'
+    implementation 'com.balysv:material-ripple:1.0.2'
 
     //Tests
     testImplementation 'junit:junit:4.12'
